tests/invalid/Return_Invalid_7.whiley
function f(bool y) -> int:
    return !y
